--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,20 @@
 {
-  "version": 2
+  "name": "horse-futsal-tournament",
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
+  ]
 }
