--- a/package.json
+++ b/package.json
@@ -12,24 +12,22 @@
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "mongoose": "^8.0.3",
-    "next-auth": "^4.24.5",
+    "mongoose": "^8.0.0",
+    "next-auth": "^4.24.0",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.41.3",
-    "papaparse": "^5.4.1",
-    "jspdf": "^2.5.1",
+    "cloudinary": "^1.41.0",
+    "formidable": "^3.5.1",
     "date-fns": "^2.30.0",
-    "react-hook-form": "^7.48.2",
+    "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.294.0",
+    "lucide-react": "^0.292.0",
     "@tailwindcss/forms": "^0.5.7",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "formidable": "^3.5.1"
+    "postcss": "^8.4.31"
   },
   "devDependencies": {
-    "eslint": "^8.54.0",
+    "eslint": "^8.52.0",
     "eslint-config-next": "14.0.4"
   }
 }
